--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,7 +10,7 @@ font_size 15
 
 # The basic colors
 foreground              #cdd6f4
-background              #131414
+background              #1d2021
 selection_foreground    #1e1e2e
 selection_background    #f5e0dc
 
