--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -208,7 +208,7 @@ bind = $mainMod, C, killactive,
 #bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, rofi -show drun
+bind = $mainMod, R, exec, rofi -show drun -show-icons
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
